# sre-incident-triage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  launch.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  serve_ui.py  sre_triage.html  test_scores_valid.py
server/: app.py  engine.py  incident_generator.py  main.py  models.py
server/data/: services.json
server/graders/: __init__.py  grader.py
server/tasks/: __init__.py
tests/: test_env.py
