[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-triage"
version = "1.0.0"
description = "OpenEnv-compliant benchmark for training AI agents on production incident response"
authors = [{name = "adityasingh-op"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "gradio>=4.44.1",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/adityasingh-op/sre-incident-triage"
Repository = "https://huggingface.co/spaces/adityasingh-op/sre-incident-triage"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
